--- a/app/views/letter_spring/index.html.erb
+++ b/app/views/letter_spring/index.html.erb
@@ -25,19 +25,35 @@
               <%= render 'right_menu' %>
            </aside>
            <div class="page-content col-md-9 padding-bottom-xl">
-              <article class="post post-single">
-                 <header> <img src="/frontend/images/image_1.jpg" alt="<%= @spring_letters.title_vn %>">
-                    <h3 class="post-title text-uppercase"><%= @spring_letters.title_vn %></h3>
-                    <ul class="post-meta">
-                       <li> <i class="fa fa-calendar"></i>
-                          <time datetime="<%= @spring_letters.created_at %>"><%= @spring_letters.created_at %></time>
-                       </li>
-                    </ul>
-                 </header>
-                 <div class="post-content">
-                    <%= @spring_letters.content_vn.html_safe %>
-                 </div>
-              </article>
+            <% if params[:locale] == "en" %>
+                <article class="post post-single">
+                    <header> <img src="/frontend/images/image_1.jpg" alt="<%= @spring_letters.title_en %>">
+                       <h3 class="post-title text-uppercase"><%= @spring_letters.title_en %></h3>
+                       <ul class="post-meta">
+                          <li> <i class="fa fa-calendar"></i>
+                             <time datetime="<%= @spring_letters.created_at %>"><%= @spring_letters.created_at %></time>
+                          </li>
+                       </ul>
+                    </header>
+                    <div class="post-content">
+                       <%= @spring_letters.content_en.html_safe %>
+                    </div>
+                 </article>
+             <% else %>
+                <article class="post post-single">
+                    <header> <img src="/frontend/images/image_1.jpg" alt="<%= @spring_letters.title_vn %>">
+                       <h3 class="post-title text-uppercase"><%= @spring_letters.title_vn %></h3>
+                       <ul class="post-meta">
+                          <li> <i class="fa fa-calendar"></i>
+                             <time datetime="<%= @spring_letters.created_at %>"><%= @spring_letters.created_at %></time>
+                          </li>
+                       </ul>
+                    </header>
+                    <div class="post-content">
+                       <%= @spring_letters.content_vn.html_safe %>
+                    </div>
+                 </article>
+             <% end %>
            </div>
         </div>
      </div>
